fix(browser): update question submit to use 201 status
